[package]
name = "one_time_pad"
version = "0.1.0"
authors = ["Napster777 <jorge.zapata@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.2.0"
bytes = "0.5"
rand = "0.5"
rand_chacha = "0.2.2"